<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/card_background"
        android:padding="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@id/cardViewFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/maleString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:drawablePadding="5sp"
            android:padding="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/male"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFemale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewMale"
        app:layout_constraintTop_toTopOf="@+id/cardViewMale">
        <TextView
            android:text="@string/femaleString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:drawablePadding="5sp"
            android:padding="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/female" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewMale">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/heightTitle"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/titleColor" />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|bottom"
                android:text="170"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <SeekBar
                android:id="@+id/heightSeekBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressTint="@color/tint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="300" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@id/cardViewAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|bottom"
                android:text="@string/weightTitle"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/titleColor" />

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|bottom"
                android:text="84kg"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <SeekBar
                android:id="@+id/weightSeekBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressTint="@color/tint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="200" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewWeight"
        app:layout_constraintTop_toTopOf="@+id/cardViewWeight">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|bottom"
                android:text="@string/ageTitle"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/titleColor" />
            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|bottom"
                android:text="23"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/ageSeekBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressTint="@color/tint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="80" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/calculate_btn"
        android:onClick="calculateBMI"
        android:text="@string/calculate_btn_txt"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>